chore: catch URISyntaxException instead of MalformedURLException